Fix archive permalink

--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,7 @@
 ---
 layout: posts
 title: Posts by Year
+permalink: /archive
 ---
 
 <p>You can also navigate through the <a href="/categories">categories</a> and <a href="/tags">tags</a> pages.</p>
