--- a/archive.html
+++ b/archive.html
@@ -4,4 +4,4 @@ title: Posts by Year
 permalink: /archive
 ---
 
-<p>You can also navigate through the <a href="/categories">categories</a> and <a href="/tags">tags</a> pages.</p>
+<p>You can also navigate through the <a href="/categories/">categories</a> and <a href="/tags/">tags</a> pages.</p>
