Blog redirect to Home

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ author_profile: true
 classes: wide
 redirect_from:
   - /blog
+  - /blog/
 ---
 
 <p>Hello and welcome, I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> and a proud <b>husband and father of two</b>. I live with my family in <a href="https://en.wikipedia.org/wiki/Porto_Alegre">Porto Alegre</a>, Brazil.</p>
