--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: home
 title: Homepage
 author_profile: true
 classes: wide
+redirect_from:
+  - /blog
 ---
 
 <p>Hello and welcome, I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> and a proud <b>husband and father of two</b>. I live with my family in <a href="https://en.wikipedia.org/wiki/Porto_Alegre">Porto Alegre</a>, Brazil.</p>
