Improve home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ redirect_from:
   - /blog/
 ---
 
-<p>Hello and welcome, I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> and a proud <b>husband and father of two</b>. I live with my family in <a href="https://en.wikipedia.org/wiki/Porto_Alegre">Porto Alegre</a>, Brazil.</p>
+<p>Hello and welcome, I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> and I work for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>. I live with my family in <a href="https://en.wikipedia.org/wiki/Porto_Alegre" target="_blank">Porto Alegre</a>, Brazil.</p>
 
 <p>This <b>site</b> is a <b>personal project to practice writing in English</b>. Here I write about a variety of topics, such as my professional experience with <b><a href="/leadership">leadership</a></b>, <b><a href="/mgmt">management</a></b>, and <b><a href="/mgmt/swe">software engineering</a></b>, but also about random stuff such as <b>books</b>, <b><a href="/categories#personal-finance">personal finance</a></b>, <b>family</b>, and more.</p>
