--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@ redirect_from:
 <p>Hello and welcome, I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> and I work for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
 
 <p>This <b>site</b> is a <b>personal project to practice writing in English</b>. Here I write about a variety of topics, such as my professional experience with <b><a href="/leadership">leadership</a></b>, <b><a href="/mgmt">management</a></b>, and <b><a href="/mgmt/swe">software engineering</a></b>, but also about random stuff such as <b><a href="/categories#books">books</a></b>, <b><a href="/categories#personal-finance">personal finance</a></b>, <b>family</b>, and more.</p>
+
+You can easily find me on <a rel="me" href="https://twitter.com/eduardopklein">Twitter</a> or <a rel="me" href="https://mastodon.online/@eduklein">Mastodon</a> to give feedback or discuss any of my thoughts shared on this website.
