Improve site navigation Move SWE to collection

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ redirect_from:
 
 <p>Hello and welcome; I am <b><a href="/about">Eduardo Klein</a></b>! I am a Brazilian <b>software engineering manager</b> working for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
 
-<p>This <b>site</b> is a <b>personal project to practice writing in English</b>. Here I write about various topics, such as my professional experience with <b><a href="/leadership">leadership</a></b>, <b><a href="/mgmt">management</a></b>, and <b><a href="/swe">software engineering</a></b>, and other personal interests, including <b><a href="/personal-dev">personal development</a></b>, <b><a href="/categories#books">books</a></b>, <b><a href="/categories#personal-finance">personal finance</a></b>, <b>family</b>, and more.</p>
+<p>This <b>site</b> is a <b>personal project to practice writing in English</b>. Here I write about various topics, such as my professional experience with <b><a href="/leadership">leadership</a></b>, <b><a href="/mgmt">management</a></b>, and <b><a href="/swe">software engineering</a></b>. I occasionally write about other personal interests, including <b><a href="/personal-dev">personal development</a></b>, <b><a href="/categories#books">books</a></b>, <b><a href="/categories#personal-finance">personal finance</a></b>, <b>family</b>, and more.</p>
 
 <p>You can easily find me on <a rel="me" href="https://twitter.com/eduardopklein" target="_blank">Twitter</a> or <a rel="me" href="https://mastodon.online/@eduklein" target="_blank">Mastodon</a> to give feedback or discuss any of my thoughts shared on this website.</p>
 
