--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ redirect_from:
 
 <p>This <b>site</b> is a <b>personal project to practice writing in English</b>. Here I write about various topics, such as my professional experience with <b><a href="/leadership">leadership</a></b>, <b><a href="/mgmt">management</a></b>, and <b><a href="/swe">software engineering</a></b>. I occasionally write about other personal interests, including <b><a href="/personal-dev">personal development</a></b>, <b><a href="/categories#books">books</a></b>, <b><a href="/categories#personal-finance">personal finance</a></b>, <b>family</b>, and more.</p>
 
+<p>I'm available for mentorship at <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a> and <a rel="me" href="https://adplist.org/mentors/eduardo-p-klein" target="_blank">ADPList</a>. Reach me out if you want any support!</p>
+
 <p>You can easily find me on <a rel="me" href="https://twitter.com/eduardopklein" target="_blank">Twitter</a> or <a rel="me" href="https://mastodon.online/@eduklein" target="_blank">Mastodon</a> to give feedback or discuss any of my thoughts shared on this website.</p>
 
 {% include newsletter-banner.html %}
