Improve SEM Page and related content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ redirect_from:
   - /blog/
 ---
 
-<p>Hello and welcome; I am <a href="/about">Eduardo Klein</a>! I am a Brazilian <b>software engineering manager</b> working for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
+<p>Hello and welcome; I am <a href="/about">Eduardo Klein</a>! I am a Brazilian <b><a href="/mgmt/sem/sem-role">software engineering manager</a></b> working for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
 
 <p>This site is a <b>personal project to practice writing in English</b>. Here I write about various topics, such as my professional experience with <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
 
