Improve home page description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@ redirect_from:
   - /blog/
 ---
 
-<p>Hello and welcome; I am <a href="/about">Eduardo Klein</a>! I am a Brazilian <b><a href="/mgmt/sem/sem-role">software engineering manager</a></b> working for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
+<p>Hello and welcome; I am <a href="/about">Eduardo Klein</a>! I am a Brazilian <a href="/mgmt/sem/sem-role">software engineering manager</a> working for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
 
-<p>This site is a <b>personal project to practice writing in English</b>. Here I write about various topics, such as my professional experience with <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
+<p>In this site I write about my professional experience with <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
 
-<p>Connect with me for mentorship at <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a> and consider <a href="https://tinyletter.com/eduklein">subscribing to my newsletter</a> to be up to date with the latest content I publish.
+<p>If you seek my support, connect with me for mentorship at <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>.
+
+{% include newsletter-banner.html %}
