Improve home page description

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ redirect_from:
 
 <p>In this site I write about my professional experience with <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
 
-<p>If you are seeking my support, please feel free to connect with me for mentorship through <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>.
+<p>If you seek my support, feel free to connect with me for mentorship through <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>.
 
 {% include newsletter-banner.html %}
