Include Mailchimp contact form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ redirect_from:
 
 <p>In this site I write about my professional experience with <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
 
-<p>If you seek my support, feel free to connect with me for mentorship through <a rel="me" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>.
+<p>If you seek my support, feel free to connect with me for mentorship!</p>
 
-{% include newsletter-banner.html %}
+<p style="text-align: center;"><a rel="me" class="btn btn--primary" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>&nbsp;<a rel="me" class="btn btn--primary" href="https://us13.list-manage.com/contact-form?u=ebb7cc2c07def0788b46dbb03&form_id=4bb26633174b45534110899b2097f27f" target="_blank">Send a Message</a></p>
+<!-- {% include newsletter-banner.html %} -->
