Revert "Add a first localized page in PT"
This reverts commit cb33c7e4aa3838dcbb086ad3d4560276604c6080.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: home
-lang: en
 title: Homepage
 author_profile: true
 classes: wide
@@ -12,7 +11,7 @@ redirect_from:
 <p>Hello and welcome! I am <a href="/about">Eduardo Klein</a>, a Brazilian <a href="/mgmt/sem/sem-role">software engineering manager</a> who works for <b><a href="/about/vtex">VTEX</a> in the digital commerce industry</b>.
 <p>On this site, I write about my professional experience in <a href="/leadership">leadership</a>, <a href="/mgmt">management</a>, and <a href="/swe">software engineering</a> in the technology industry. I occasionally write about other personal interests.</p>
 
-<p>If you seek professional support, feel free to contact me for mentorship!</p>
+<p>If you seek my support, feel free to contact me for mentorship!</p>
 
 <p style="text-align: center;"><a rel="me" class="btn btn--primary" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>&nbsp;<a rel="me" class="btn btn--primary" href="https://us13.list-manage.com/contact-form?u=ebb7cc2c07def0788b46dbb03&form_id=4bb26633174b45534110899b2097f27f" target="_blank">Send a Message</a></p>
 
