Migration from Mailchimp to ConvertKit

--- a/index.html
+++ b/index.html
@@ -13,5 +13,4 @@ redirect_from:
 
 <p>If you seek my support, feel free to contact me for mentorship!</p>
 
-<p style="text-align: center;"><a rel="me" class="btn btn--primary" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a>&nbsp;<a rel="me" class="btn btn--primary" href="https://us13.list-manage.com/contact-form?u=ebb7cc2c07def0788b46dbb03&form_id=4bb26633174b45534110899b2097f27f" target="_blank">Send a Message</a></p>
-
+<p style="text-align: center;"><a rel="me" class="btn btn--primary" href="https://www.mentoring-club.com/the-mentors/eduardo-klein" target="_blank">The Mentoring Club</a></p>
